removed dimensions text and fixed broken styles

--- a/themes/sept11mm/assets/pawtucket/css/theme.css
+++ b/themes/sept11mm/assets/pawtucket/css/theme.css
@@ -45,8 +45,9 @@ body {
 	background-color:#E2EAED;
 	font-size:13px;
 	line-height:1.6em;
+	margin-bottom:0px;
 }
-a {
+a, a:hover {
 	color:#21B1E7;
 }
 H1, h1, H2, h2, H3, h3, H4, h4, H5, h5, H6, h6{
